# projeto-nggs-cla.github.io

./: .gitignore  CNAME  README.md  ai-instruction.md  instruções.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: index.md  sobre.md
docs/assets/css/: custom.css
docs/assets/js/: custom.js
docs/assets/scripts/: comandoscmd.txt  nggs-otimizador.bat  nggs-passos-manual.txt
docs/comunidade/: discord.md
docs/gpu/: amd.md  nvidia.md
docs/mouse/: calculadora.md  fundamentos.md  teste.md
docs/pc/: checklist.md  comandos-cmd.md  rede.md  storage.md  windows.md
docs/pubg/: anexos.md  guia-geral.md
docs/pubg/armas/: _template-arma.md
legacy_site/: index.html
legacy_site/assets/css/: style.css
legacy_site/assets/js/: main.js
project-root/: README.md  app.py
project-root/static/css/: style.css
project-root/static/js/: main.js
project-root/templates/: index.html
scripts/: __init__.py  cli.py
scripts/generators/: __init__.py  tables.py  weapons.py
scripts/templates/: arma_template.md.j2
scripts/utils/: __init__.py  files.py  math.py
tests/: conftest.py  instruções.md  test_generators_weapons.py  test_utils_files.py  test_utils_math.py
